--- a/src/resources/views/admin/aside.ejs
+++ b/src/resources/views/admin/aside.ejs
@@ -27,7 +27,7 @@
                with font-awesome or any other icon font library -->
                 <li class="nav-item has-treeview">
                     <a href="/admin" class="nav-link">
-                        <i class="nav-icon fas fa-tachometer-alt"></i>
+                        <i class="nav-icon fas fa-tachometer-alt mx-1"></i>
                         <p>
                             Bảng tin
                         </p>
@@ -35,7 +35,7 @@
                 </li>
                 <li class="nav-item has-treeview">
                     <a href="/admin/nhanvien" class="nav-link">
-                        <i class="nav-icon fas fa-copy"></i>
+                        <i class="fa-solid fa-clipboard-user mx-2"></i>
                         <p>
                             Nhân viên
                         </p>
@@ -43,7 +43,7 @@
                 </li>
                 <li class="nav-item has-treeview">
                     <a href="/admin/khachhang" class="nav-link">
-                        <i class="nav-icon fas fa-chart-pie"></i>
+                        <i class="nav-icon fas fa-chart-pie mx-1"></i>
                         <p>
                             Khách hàng
                         </p>
@@ -51,7 +51,7 @@
                 </li>
                 <li class="nav-item has-treeview">
                     <a href="#" class="nav-link">
-                        <i class="nav-icon fas fa-tree"></i>
+                        <i class="nav-icon fas fa-tree mx-1"></i>
                         <p>
                             Quản lý sản phẩm
                             <i class="fas fa-angle-left right"></i>
@@ -92,7 +92,7 @@
                 </li>
                 <li class="nav-item has-treeview">
                     <a href="#" class="nav-link">
-                        <i class="nav-icon fas fa-edit"></i>
+                        <i class="nav-icon fas fa-edit mx-1"></i>
                         <p>
                             Quản lý danh mục
                             <i class="fas fa-angle-left right"></i>
@@ -139,7 +139,7 @@
                 </li>
                 <li class="nav-item has-treeview">
                     <a href="/admin/hoadon" class="nav-link">
-                        <i class="nav-icon fas fa-table"></i>
+                        <i class="fa-solid fa-money-bills mx-2"></i>
                         <p>
                             Hóa đơn
                         </p>
@@ -147,7 +147,7 @@
                 </li>
                 <li class="nav-item has-treeview">
                     <a href="/admin/baohanh" class="nav-link">
-                        <i class="nav-icon fas fa-table"></i>
+                        <i class="fa-solid fa-award mx-2"></i>
                         <p>
                             Bảo hành
                         </p>
@@ -155,7 +155,7 @@
                 </li>
                 <li class="nav-item has-treeview">
                     <a href="/admin/nhapkho" class="nav-link">
-                        <i class="nav-icon fas fa-table"></i>
+                        <i class="fa-solid fa-warehouse mx-2"></i>
                         <p>
                             Nhập kho
                         </p>
@@ -163,7 +163,7 @@
                 </li>
                 <li class="nav-item has-treeview">
                     <a href="#" class="nav-link">
-                        <i class="nav-icon fas fa-table"></i>
+                        <i class="nav-icon fas fa-table mx-1"></i>
                         <p>
                             Báo cáo
                         </p>
@@ -171,7 +171,7 @@
                 </li>
                 <li class="nav-item has-treeview">
                     <a href="/auth/logoutAdmin" class="nav-link">
-                        <i class="nav-icon fas fa-table"></i>
+                        <i class="fa-solid fa-right-from-bracket mx-2"></i>
                         <p>
                             Đăng xuất
                         </p>
