--- a/src/resources/views/admin/khach_hang/khachhang.ejs
+++ b/src/resources/views/admin/khach_hang/khachhang.ejs
@@ -151,9 +151,11 @@
                                 <td>
                                     <div class="d-flex ">
                                         <a href="/admin/edit_Khachhang/<%= khachhang.id %>"
-                                            class="btn btn-outline-success btn-sm mx-1">Sửa</a>
+                                            class="btn btn-outline-success btn-sm mx-1"><i
+                                                class="fa-solid fa-pen-to-square"></i></a>
                                         <button class="btn btn-outline-danger btn-sm mx-1"
-                                            onclick="confirmDelete(`<%= khachhang.id %>`)">Xóa</button>
+                                            onclick="confirmDelete(`<%= khachhang.id %>`)"><i
+                                                class="fa-solid fa-trash"></i></button>
 
                                     </div>
 
