--- a/src/resources/views/admin/danhmuc/xa.ejs
+++ b/src/resources/views/admin/danhmuc/xa.ejs
@@ -115,9 +115,11 @@
                                 <td>
                                     <div class="d-flex ">
                                         <a href="/admin/edit_nhanvien/<%= xa.id %>"
-                                            class="btn btn-outline-success btn-sm mx-1">Sửa</a>
+                                            class="btn btn-outline-success btn-sm mx-1"><i
+                                                class="fa-solid fa-pen-to-square"></i></a>
                                         <a href="/admin/delete_xa/<%= xa.id %>"
-                                            class="btn btn-outline-danger btn-sm mx-1">Xóa</a>
+                                            class="btn btn-outline-danger btn-sm mx-1"><i
+                                                class="fa-solid fa-trash"></i></a>
                                     </div>
                                 </td>
                             </tr>
