--- a/src/resources/views/admin/nhap_kho/nhap_kho.ejs
+++ b/src/resources/views/admin/nhap_kho/nhap_kho.ejs
@@ -73,12 +73,13 @@
                                 </td>
                                 <td>
                                     <div class="d-flex ">
-                                        <a href="/admin/edit_hoa_don/"
-                                            class="btn btn-outline-success btn-sm mx-1">Sửa</a>
-                                        <a href="#" onclick="confirmDelete(``)"
-                                            class="btn btn-outline-danger btn-sm mx-1">Xóa</a>
+                                        <a href="#" class="btn btn-outline-success btn-sm mx-1"><i
+                                                class="fa-solid fa-pen-to-square"></i></a>
+                                        <a href="#" onclick="confirmDelete(`<%= phieunhapkho.id %>`)"
+                                            class="btn btn-outline-danger btn-sm mx-1"><i
+                                                class="fa-solid fa-trash"></i></a>
                                         <a href="/admin/chi_tiet_nhap_kho/<%= phieunhapkho.id %>"
-                                            class="btn btn-outline-danger btn-sm mx-1">Chi tiết</a>
+                                            class="btn btn-outline-info btn-sm mx-1"><i class="fa-solid fa-eye"></i></a>
                                     </div>
 
                                 </td>
@@ -96,7 +97,7 @@
         <script>
             function confirmDelete(id) {
                 if (confirm("Bạn có chắc chắn muốn xóa hóa đơn này?")) {
-                    window.location.href = "/admin/xoa_hoa_don/" + id;
+                    window.location.href = "/admin/xoa_nhapkho/" + id;
                 } else {
                     // Không làm gì cả
                 }
