--- a/src/resources/views/admin/product/danhmucsp.ejs
+++ b/src/resources/views/admin/product/danhmucsp.ejs
@@ -76,9 +76,11 @@
                                 <td>
                                     <div class="d-flex ">
                                         <a href="/admin/edit_nhanvien/<%= danhmucsp.id %>"
-                                            class="btn btn-outline-success btn-sm mx-1">Sửa</a>
+                                            class="btn btn-outline-success btn-sm mx-1"><i
+                                                class="fa-solid fa-pen-to-square"></i></a>
                                         <a href="/admin/delete_danh_muc/<%= danhmucsp.id %>"
-                                            class="btn btn-outline-danger btn-sm mx-1">Xóa</a>
+                                            class="btn btn-outline-danger btn-sm mx-1"><i
+                                                class="fa-solid fa-trash"></i></a>
                                     </div>
                                 </td>
                             </tr>
