--- a/src/resources/views/admin/product/product_all.ejs
+++ b/src/resources/views/admin/product/product_all.ejs
@@ -206,9 +206,11 @@
                                 <td>
                                     <div class="d-flex ">
                                         <a href="/admin/edit_product_all/<%= item.id %>"
-                                            class="btn btn-outline-success btn-sm mx-1">Sửa</a>
+                                            class="btn btn-outline-success btn-sm mx-1"><i
+                                                class="fa-solid fa-pen-to-square"></i></a>
                                         <a href="/admin/delete_product_all/<%= item.id %>"
-                                            class="btn btn-outline-danger btn-sm mx-1">Xóa</a>
+                                            class="btn btn-outline-danger btn-sm mx-1"><i
+                                                class="fa-solid fa-trash"></i></a>
                                     </div>
                                 </td>
                             </tr>
