--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -142,8 +142,28 @@ button {
   margin-right: 4px;
 }
 
-
 .font-weight {
   font-weight: 600;
 }
 
+.select-wrapper {
+  position: relative;
+}
+
+.select-wrapper select {
+  padding-right: 30px;
+  /* Khoảng cách để icon không bị che khuất */
+}
+
+.select-wrapper::after {
+  content: "\f0d7";
+  /* Unicode của icon caret-down */
+  font-family: "FontAwesome";
+  /* Font chứa icon */
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none;
+  /* Để click vào icon không ảnh hưởng đến thẻ select */
+}
