--- a/src/resources/views/admin/hoa_don/edit_hoa_don.ejs
+++ b/src/resources/views/admin/hoa_don/edit_hoa_don.ejs
@@ -3,33 +3,41 @@
         <div class="content-wrapper">
             <div class="mt-3">
                 <div class="container-fluid">
+                    <label for="" class="form-label">Dơn mua hàng: <%- data.id %> </label>
                     <!-- thêm class này vào form để validation needs-validation -->
-                    <form method="POST" action="" class="row g-3">
-                        <div class="col-md-4">
-                            <label for="" class="form-label">Dơn mua hàng: <%- data.id %> </label>
-                        </div>
+                    <form method="POST" action="/admin/update_hoa_don/<%= data.id %>" class="row g-3 mt-4">
+
                         <div class="col-md-4">
                             <label for="" class="form-label">Hình thức thanh toán</label>
-                            <select class="form-control" name="hinh_thuc_thanh_toan" id="">
-                                <option value="1"> Thanh toán khi nhận hàng </option>
-                                <option value="2"> Thanh toán online </option>
-                            </select>
+                            <div class="select-wrapper">
+                                <select class="form-control" name="hinh_thuc_thanh_toan" id="hinh_thuc_thanh_toan">
+                                    <option value="1" <%=data.hinh_thuc_thanh_toan===1 ? 'selected' : '' %>> Thanh toán
+                                        khi nhận hàng </option>
+                                    <option value="2" <%=data.hinh_thuc_thanh_toan===2 ? 'selected' : '' %>> Thanh toán
+                                        online </option>
+                                </select>
+                            </div>
                         </div>
-                        
+
                         <div class="col-md-4">
                             <label for="validationCustom03" class="form-label">Trạng thái</label>
-                            <select class="form-control" name="trang_thai" id="">
-                                <option value="1"> Chờ xác nhận </option>
-                                <option value="2"> Đã xác nhận </option>
-                                <option value="3"> Đã bảo hành </option>
-                                <option value="4"> Đã hoàn thành </option>
-                                <option value="5"> Hủy </option>
-                            </select>
+                            <div class="select-wrapper">
+                                <select class="form-control" name="trang_thai" id="trang_thai">
+                                    <option value="1" <%=data.trang_thai===1 ? 'selected' : '' %>> Chờ xác nhận
+                                    </option>
+                                    <option value="2" <%=data.trang_thai===2 ? 'selected' : '' %>> Đã xác nhận </option>
+                                    <option value="3" <%=data.trang_thai===3 ? 'selected' : '' %>> Đã bảo hành </option>
+                                    <option value="4" <%=data.trang_thai===4 ? 'selected' : '' %>> Đã hoàn thành
+                                    </option>
+                                    <option value="5" <%=data.trang_thai===5 ? 'selected' : '' %>> Hủy </option>
+                                </select>
+                            </div>
                         </div>
                         <div class="col-12">
                             <button class="btn btn-primary" type="submit">Submit form</button>
                         </div>
                     </form>
+
                 </div>
             </div>
 
