--- a/src/resources/views/user/order.ejs
+++ b/src/resources/views/user/order.ejs
@@ -9,10 +9,17 @@
             </p>
           </div>
           <ul class="">
-            <li class="item_"><a href="/tai_khoan">Tài khoản của tôi</a></li>
-            <li class="item_ mt-3"><a href="/order">Dơn mua hàng</a></li>
-            <li class="item_ mt-3"><a href="/bao_hanh">Đơn bảo hành</a></li>
-            <li class="item_ mt-3 pb-3"><a href="/lich_su_mua_hang">Lịch sử mua hàng</a></li>
+            <li class=""><a class="item_ font-weight" href="/tai_khoan"><i class="fa-solid fa-person"></i> <span
+                  class="mx-2">Tài
+                  khoản của tôi</span></a></li>
+            <li class=" mt-3"><a class="item_ font-weight" href="/order"><i class="fa-solid fa-gift"></i><span
+                  class="mx-2">Dơn mua
+                  hàng</span> </a></li>
+            <li class=" mt-3"><a class="item_ font-weight" href="/bao_hanh"><i class="fa-solid fa-wrench"></i><span
+                  class="mx-2">Đơn
+                  bảo hành</span> </a></li>
+            <li class=" mt-3 pb-3"><a class="item_ font-weight" href="/lich_su_mua_hang"><i
+                  class="fa-solid fa-clock-rotate-left"></i><span class="mx-2">Lịch sử mua hàng</span> </a></li>
           </ul>
         </div>
       </div>
@@ -402,7 +409,20 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const currentPath = window.location.pathname;
 
+      const links = document.querySelectorAll(".item_");
+      links.forEach(link => {
+        if (link.getAttribute("href") === currentPath) {
+          link.classList.add("active_order");
+        }
+      });
+    });
+  </script>
+
+  </script>
 
   <script>
     function confirmCancelOrder(orderId) {
